Added frontend validation to SignIn Form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <button mat-raised-button (click)="openDialog()">Login</button>
+  <button mat-raised-button (click)="openDialogSignIn()">Sign in</button>
+  <button mat-raised-button (click)="openDialogSignUp()">Sign up</button>
 </div>
-
