--- a/src/app/authorization/signup/signup.component.css
+++ b/src/app/authorization/signup/signup.component.css
@@ -1,3 +1,8 @@
-.mat-form-field{
+.mat-form-field {
     width: 100%;
+    margin-top: 10px;
+}
+
+.mat-form-field:first-child {
+    margin-top: 0;
 }
