--- a/src/app/authorization/signup/signup.component.html
+++ b/src/app/authorization/signup/signup.component.html
@@ -5,13 +5,13 @@
         <mat-error *ngIf="email.invalid">{{getErrorEmailMessage()}}</mat-error>
     </mat-form-field>
     <mat-form-field>
-        <mat-hint align="start">Max 80 characters, min 2</mat-hint>
+        <mat-hint align="start">Max 80 characters, min 3</mat-hint>
         <input tabindex="2" type="text" maxlength="80" [formControl]="name" [(ngModel)]="data.name" matInput placeholder="Name" required >
         <mat-hint align="end">{{name.value?.length||0}}/80</mat-hint>
         <mat-error *ngIf="name.invalid">{{getErrorNameMessage()}}</mat-error>
     </mat-form-field>
     <mat-form-field>
-        <mat-hint align="start">Max 80 characters, min 2</mat-hint>
+        <mat-hint align="start">Max 80 characters, min 3</mat-hint>
         <input tabIndex="3" type="text" maxlength="80" [formControl]="surname" [(ngModel)]="data.surname" matInput placeholder="Surname" required >
         <mat-hint align="end">{{surname.value?.length||0}}/80</mat-hint>
         <mat-error *ngIf="surname.invalid">{{getErrorSurnameMessage()}}</mat-error>
@@ -30,6 +30,6 @@
     </mat-form-field>
 </div>
 <div mat-dialog-actions>
-    <button mat-button [mat-dialog-close]="data" tabindex="6">Sign up</button>
+    <button mat-button (click)="email.valid && name.valid && surname.valid && password.valid && passwordConfirm.valid && signUp(data)" tabindex="6">Sign up</button>
     <button mat-button (click)="onNoClickSignUp()" tabindex="-1">Cancel</button>
 </div>
