--- a/src/app/post/create-edit/common-form/post-form.component.html
+++ b/src/app/post/create-edit/common-form/post-form.component.html
@@ -3,21 +3,21 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="editPost" id="app">
                 <form>
-                    <div *ngIf="post.title.length > 0; then edit else create"></div>
-                    <ng-template #edit>
+                    <div *ngIf="isCreated == true; then createPost else editPost"></div>
+                    <ng-template #editPost>
                         <h2>Edit Post</h2>
                     </ng-template>
-                    <ng-template #create>
+                    <ng-template #createPost>
                         <h2>Create Post</h2>
                     </ng-template>
                     <mat-form-field class="form-input-short">
-                        <input matInput tabindex="1" placeholder="Post Title" [value]="post.title">
+                        <input matInput tabindex="1" placeholder="Post Title" [value]="post.title" [(ngModel)]="post.title" name="post.title">
                     </mat-form-field>
                     <mat-form-field class="form-input-short">
-                        <input matInput tabindex="2" placeholder="Post Subtitle" [value]="post.subtitle">
+                        <input matInput tabindex="2" placeholder="Post Subtitle" [value]="post.subtitle" [(ngModel)]="post.subtitle" name="post.subtitle">
                     </mat-form-field>
                     <mat-form-field class="form-input-long">
-                        <textarea matInput matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="50" tabindex="3" placeholder="Post Text" [value]="post.text"></textarea>
+                        <textarea matInput matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="50" tabindex="3" placeholder="Post Text" [value]="post.text" [(ngModel)]="post.text" name="post.text"></textarea>
                     </mat-form-field>
                     <mat-form-field class="form-input-long">
                         <mat-chip-list #chipList>
@@ -36,8 +36,8 @@
                         </mat-chip-list>
                     </mat-form-field>
                     <div mat-dialog-actions>
-                        <button mat-button *ngIf="post.title.length > 0" tabindex="5">Edit</button>
-                        <button mat-button *ngIf="post.title.length == 0" tabindex="5">Create</button>
+                        <button mat-button *ngIf="isCreated !== true" tabindex="5">Edit</button>
+                        <button mat-button *ngIf="isCreated == true" tabindex="5" (click)="create(post)">Create</button>
                         <button mat-button tabindex="6">Cancel</button>
                     </div>
                 </form>
