--- a/src/app/post/create-edit/create/post-create.component.html
+++ b/src/app/post/create-edit/create/post-create.component.html
@@ -1,1 +1,1 @@
-<app-post-form [post]="post"></app-post-form>
+<app-post-form [post]="post" [isCreated]="isCreated" (createPost)="createPost($event)"></app-post-form>
