--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,3 +46,35 @@
 
 <div class="header"></div>
 <router-outlet></router-outlet>
+
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <p>Quisque turpis lorem, vehicula eget rhoncus vel, ultricies ac mauris. Morbi lectus velit, tincidunt congue pharetra eu, varius nec libero. Vivamus justo risus, dignissim ac vestibulum eget, egestas rutrum magna. Etiam malesuada nisi et nisl volutpat tristique.</p>
+                <ul class="social-links">
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
+                </ul>
+                <br>
+                <small>Copyright 2012 Footer here</small>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-right">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-addon">
+                                <i class="fa fa-envelope btn-icon"></i>
+                            </div>
+                            <input type="text" class="form-control join" placeholder="Join Our Newsletter Here">
+                            <div class="input-group-addon btn-join-block">
+                                <input type="submit" class="btn-join btn-foo" value="Join">
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</footer>
