Added layout and styles to posts-list and post-preview

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-
-</div>
-
-
 <!-- Fixed navbar -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
@@ -14,7 +8,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
           </button>
-          <a id="logo" class="navbar-brand" href="index.html">Creative<sup>+</sup></a>
+          <a class="navbar-brand logo" href="index.html">Creative<sup>+</sup></a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -45,6 +39,7 @@
 </nav>
 
 <div class="header"></div>
+
 <router-outlet></router-outlet>
 
 <footer>
