--- a/src/app/post/create-edit/common-form/post-form.component.html
+++ b/src/app/post/create-edit/common-form/post-form.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="editPost" id="app">
+            <div class="edit-post">
                 <form>
                     <div *ngIf="isCreated == true; then createPost else editPost"></div>
                     <ng-template #editPost>
