Changed visualization of create/edit form

--- a/src/app/post/create-edit/common-form/post-form.component.css
+++ b/src/app/post/create-edit/common-form/post-form.component.css
@@ -12,3 +12,9 @@
     padding: 30px;
     margin-bottom: 50px;
 }
+
+.edit-post h2 {
+    margin-top: 0;
+    font-size: 28px;
+    font-weight: bold;
+}
