--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,9 +40,11 @@
 
 <div class="header"></div>
 
-<router-outlet></router-outlet>
+<div class="content">
+    <router-outlet></router-outlet>
+</div>
 
-<footer>
+<footer class="footer">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
