--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
     font-family: "Helvetica", "Arial", sans-serif;
     font-size: 14px;
@@ -9,8 +14,7 @@ body {
     color: #333333;
     margin: 0px;
     padding: 0px;
-    background: url(http://2.bp.blogspot.com/-iFvxg9CkLPo/U0uTIS8ieWI/AAAAAAAAATE/BFuBsdCrfqI/s1600/background.png) repeat #fff;
-    position: relative;
+    background: url(http://2.bp.blogspot.com/-iFvxg9CkLPo/U0uTIS8ieWI/AAAAAAAAATE/BFuBsdCrfqI/s1600/background.png) repeat;
 }
 
 /* Header menu */
@@ -75,19 +79,21 @@ body {
     width: 100%;
     padding: 0px;
     z-index: 500;
-    margin-bottom: 30px;
 }
 
 /* Footer */
 
-footer {
-    margin-top: 70px;
-    background-color: #343434;
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 400px;
+    background-color: #343434;    
     padding: 50px 0 120px 0;
     color: #ffffff;
 }
 
-footer p {
+.footer p {
     color: rgba(255, 255, 255, .8);
 }
 
@@ -192,4 +198,10 @@ footer p {
 .input-group-addon {
     background-color: #ffffff;
     border: 0;
+}
+
+.content {
+    padding-bottom: 50px;
+    margin: 30px 0 400px 0;
+    background-color: url(http://2.bp.blogspot.com/-iFvxg9CkLPo/U0uTIS8ieWI/AAAAAAAAATE/BFuBsdCrfqI/s1600/background.png) repeat;
 }
