--- a/src/app/post/create-edit/common-form/post-form.component.html
+++ b/src/app/post/create-edit/common-form/post-form.component.html
@@ -12,13 +12,15 @@
                     </ng-template>
                     <mat-form-field class="form-input-short">
                         <input matInput tabindex="1" placeholder="Post Title" [value]="post.title" [(ngModel)]="post.title" name="post.title" required>
-                        <mat-error *ngIf="post.title.invalid">{{getErrorTitleMessage()}}</mat-error>
+                        <mat-error *ngIf="!post.title">{{getErrorTitleMessage()}}</mat-error>
                     </mat-form-field>
                     <mat-form-field class="form-input-short">
                         <input matInput tabindex="2" placeholder="Post Subtitle" [value]="post.subtitle" [(ngModel)]="post.subtitle" name="post.subtitle" required>
+                        <mat-error *ngIf="!post.subtitle">{{getErrorSubtitleMessage()}}</mat-error>
                     </mat-form-field>
                     <mat-form-field class="form-input-long">
                         <textarea matInput matTextareaAutosize matAutosizeMinRows="8" matAutosizeMaxRows="50" tabindex="3" placeholder="Post Text" [value]="post.text" [(ngModel)]="post.text" name="post.text" required></textarea>
+                        <mat-error *ngIf="!post.text">{{getErrorTextMessage()}}</mat-error>
                     </mat-form-field>
                     <mat-form-field class="form-input-long">
                         <mat-chip-list #chipList>
@@ -35,11 +37,12 @@
                                     [matChipInputAddOnBlur]="addOnBlur"
                                     (matChipInputTokenEnd)="add($event)"
                                     required>
+                            <mat-hint *ngIf="!post.tags.length">{{getErrorTagsMessage()}}</mat-hint>
                         </mat-chip-list>
                     </mat-form-field>
                     <div mat-dialog-actions>
                         <button mat-button *ngIf="isCreated !== true" tabindex="5">Edit</button>
-                        <button mat-button *ngIf="isCreated == true" tabindex="5" (click)="create(post)">Create</button>
+                        <button mat-button *ngIf="isCreated == true" tabindex="5" (click)="post.title && post.subtitle && post.text && post.tags.length && create(post)">Create</button>
                         <button mat-button tabindex="6">Cancel</button>
                     </div>
                 </form>
