Finally finished adding the post and tags to it in the database. There is a table-dictionary of tags, there is a table of the post and a link table for the post and tags

--- a/src/app/post/list-preview/post-preview.component.html
+++ b/src/app/post/list-preview/post-preview.component.html
@@ -7,5 +7,5 @@
     <h2 class="description-post-title">{{ post.title }}</h2>
     <!-- <p class="description-post-date">{{ post.dateUpdate }}</p> -->
     <h3 class="description-post-subtitle">{{ post.subtitle }}</h3>
-    <p class="description-post-text">{{ post.text }}</p>
+    <p class="description-post-text">{{ post.excerpt }}</p>
 </div>
