--- a/src/app/post/post-view/post-view.component.html
+++ b/src/app/post/post-view/post-view.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div>
+            <div *ngIf="post">
                 <div class="one-post">
                     <img class="img-responsive center-block" src="http://via.placeholder.com/1200x600">
                     <div class="title">
