Added comments button component

--- a/src/app/post/list-preview/post-preview.component.html
+++ b/src/app/post/list-preview/post-preview.component.html
@@ -1,4 +1,5 @@
 <div class="post-img">
+    <app-comments></app-comments>
     <app-social></app-social>
     <img class="img-responsive center-block" src="http://via.placeholder.com/850x450">
 </div>
