Added component for edit/delete buttons and fixed bug with positions (in all components with buttons)

--- a/src/app/post/list-preview/post-preview.component.html
+++ b/src/app/post/list-preview/post-preview.component.html
@@ -1,5 +1,6 @@
 <div class="post-img">
     <app-comments></app-comments>
+    <app-edit-delete></app-edit-delete>
     <app-social></app-social>
     <img class="img-responsive center-block" src="http://via.placeholder.com/850x450">
 </div>
