--- a/src/app/post/list-preview/post-preview.component.css
+++ b/src/app/post/list-preview/post-preview.component.css
@@ -1,6 +1,7 @@
 /* post img */
 
 .post-img {
+    position: relative;
     background-color: white;
     border: 1px solid #ccc;
     padding: 7px;
@@ -91,4 +92,32 @@
     left: 10px;
     width: calc(100% - 20px);
     box-shadow: 0px 0px 2px #cccccc;
+}
+
+/* styles for child components */
+
+app-comments {
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+    padding: 5px 20px;
+    background-color: #f26c4f;
+    color: white;
+    border-radius: 4px;
+    cursor: default;
+    z-index: 100;
+}
+
+app-edit-delete {
+    position: absolute;
+    right: 18px;
+    top: 18px;
+}
+
+app-social {
+    position: absolute;
+    left: 8px;
+    bottom: 8px;
+    padding: 0;
+    z-index: 100;
 }
