--- a/src/app/post/create-edit/common-form/post-form.component.html
+++ b/src/app/post/create-edit/common-form/post-form.component.html
@@ -10,40 +10,42 @@
                     <ng-template #createPost>
                         <h2>Create Post</h2>
                     </ng-template>
-                    <mat-form-field class="form-input-short">
-                        <input matInput tabindex="1" placeholder="Post Title" [value]="post.title" [(ngModel)]="post.title" name="post.title" required>
-                        <mat-error *ngIf="!post.title">{{getErrorTitleMessage()}}</mat-error>
-                    </mat-form-field>
-                    <mat-form-field class="form-input-short">
-                        <input matInput tabindex="2" placeholder="Post Subtitle" [value]="post.subtitle" [(ngModel)]="post.subtitle" name="post.subtitle" required>
-                        <mat-error *ngIf="!post.subtitle">{{getErrorSubtitleMessage()}}</mat-error>
-                    </mat-form-field>
-                    <mat-form-field class="form-input-long">
-                        <textarea matInput matTextareaAutosize matAutosizeMinRows="8" matAutosizeMaxRows="50" tabindex="3" placeholder="Post Text" [value]="post.text" [(ngModel)]="post.text" name="post.text" required></textarea>
-                        <mat-error *ngIf="!post.text">{{getErrorTextMessage()}}</mat-error>
-                    </mat-form-field>
-                    <mat-form-field class="form-input-long">
-                        <mat-chip-list #chipList>
-                            <mat-chip *ngFor="let tag of post.tags"
-                                        [selectable]="selectable"
-                                        [removable]="removable"
-                                        (remove)="remove(tag)">{{tag}}
-                                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                            </mat-chip>
-                            <input tabindex="4"
-                                    placeholder="Tags"
-                                    [matChipInputFor]="chipList"
-                                    [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                                    [matChipInputAddOnBlur]="addOnBlur"
-                                    (matChipInputTokenEnd)="add($event)"
-                                    required>
-                            <mat-hint *ngIf="!post.tags.length">{{getErrorTagsMessage()}}</mat-hint>
-                        </mat-chip-list>
-                    </mat-form-field>
-                    <div mat-dialog-actions>
-                        <button mat-button *ngIf="isCreated !== true" tabindex="5">Edit</button>
-                        <button mat-button *ngIf="isCreated == true" tabindex="5" (click)="post.title && post.subtitle && post.text && post.tags.length && create(post)">Create</button>
-                        <button mat-button tabindex="6">Cancel</button>
+                    <div *ngIf="post">
+                        <mat-form-field class="form-input-short">
+                            <input matInput tabindex="1" placeholder="Post Title" [value]="post.title" [(ngModel)]="post.title" name="post.title" required>
+                            <mat-error *ngIf="!post.title">{{getErrorTitleMessage()}}</mat-error>
+                        </mat-form-field>
+                        <mat-form-field class="form-input-short">
+                            <input matInput tabindex="2" placeholder="Post Subtitle" [value]="post.subtitle" [(ngModel)]="post.subtitle" name="post.subtitle" required>
+                            <mat-error *ngIf="!post.subtitle">{{getErrorSubtitleMessage()}}</mat-error>
+                        </mat-form-field>
+                        <mat-form-field class="form-input-long">
+                            <textarea matInput matTextareaAutosize matAutosizeMinRows="8" matAutosizeMaxRows="50" tabindex="3" placeholder="Post Text" [value]="post.text" [(ngModel)]="post.text" name="post.text" required></textarea>
+                            <mat-error *ngIf="!post.text">{{getErrorTextMessage()}}</mat-error>
+                        </mat-form-field>
+                        <mat-form-field class="form-input-long">
+                            <mat-chip-list #chipList>
+                                <mat-chip *ngFor="let tag of post.tags"
+                                            [selectable]="selectable"
+                                            [removable]="removable"
+                                            (remove)="remove(tag)">{{tag}}
+                                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                                </mat-chip>
+                                <input tabindex="4"
+                                        placeholder="Tags"
+                                        [matChipInputFor]="chipList"
+                                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                                        [matChipInputAddOnBlur]="addOnBlur"
+                                        (matChipInputTokenEnd)="add($event)"
+                                        required>
+                                <mat-hint *ngIf="!post.tags.length">{{getErrorTagsMessage()}}</mat-hint>
+                            </mat-chip-list>
+                        </mat-form-field>
+                        <div mat-dialog-actions>
+                            <button mat-button *ngIf="isCreated !== true" tabindex="5">Edit</button>
+                            <button mat-button *ngIf="isCreated == true" tabindex="5" (click)="post.title && post.subtitle && post.text && post.tags.length && create(post)">Create</button>
+                            <button mat-button tabindex="6">Cancel</button>
+                        </div>
                     </div>
                 </form>
             </div>
