Added route to edit post, added input decorator for receiving post info to edit-button

--- a/src/app/post/buttons/edit-delete/edit-delete.component.html
+++ b/src/app/post/buttons/edit-delete/edit-delete.component.html
@@ -1,5 +1,5 @@
 
 <ul class="icons-post-for">
-    <li><a><span class="glyphicon glyphicon-pencil"></span></a></li>
+    <li><a routerLink="/post/{{post.id}}/edit"><span class="glyphicon glyphicon-pencil"></span></a></li>
     <li><a class="modalDeletePostIndex"><span class="glyphicon glyphicon-remove"></span></a></li>
 </ul>
