--- a/src/app/post/buttons/edit-delete/edit-delete.component.css
+++ b/src/app/post/buttons/edit-delete/edit-delete.component.css
@@ -1,6 +1,6 @@
 ul.icons-post-for li{
     list-style-type: none;
-    margin-bottom: 7px;
+    margin-bottom: 4px;
     cursor: pointer;
 }
 
@@ -11,7 +11,7 @@ ul.icons-post-for li:last-child{
 ul.icons-post-for li a{
     font-size: 16px;
     background-color: #f27255;
-    border-radius: 50%;
+    border-radius: 20%;
     color: white;
     width: 40px;
     height: 40px;
@@ -19,5 +19,10 @@ ul.icons-post-for li a{
     justify-content: center;
     align-items: center;
     text-decoration: none;
+    transition: all .7s ease;
+}
+
+ul.icons-post-for li a:hover {
+    background-color: #666;
     transition: all .7s ease;
 }
