--- a/src/app/post/post-view/post-view.component.css
+++ b/src/app/post/post-view/post-view.component.css
@@ -87,3 +87,17 @@
     width: calc(100% - 20px);
     box-shadow: 0px 0px 2px #ccc;
 }
+
+app-edit-delete {
+    position: absolute;
+    right: 18px;
+    top: 18px;
+}
+
+app-social {
+    position: absolute;
+    left: 8px;
+    bottom: 8px;
+    padding: 0;
+    z-index: 100;
+}
