--- a/src/app/post/list-preview/post-preview.component.html
+++ b/src/app/post/list-preview/post-preview.component.html
@@ -1,6 +1,6 @@
 <div class="post-img">
     <app-comments></app-comments>
-    <app-edit-delete [postId]="post.id"></app-edit-delete>
+    <app-edit-delete *ngIf="user && user.id === post.userId" [postId]="post.id"></app-edit-delete>
     <app-social></app-social>
     <img class="img-responsive center-block" src="http://via.placeholder.com/850x450">
 </div>
