Added block with 10 most popular tags in the sidebar

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -42,7 +42,7 @@
                 </div>
                 <div id="appTags">
                     <h3 class="description-title">Popular Tags</h3>
-                    <!-- <input v-for="(item, index) in itemsTags" type="submit" class="btn-join tags" v-bind:style="{fontSize: 10+item.font + 'px'}" v-bind:value="item.title" v-on:click="custom_alert(index)"> -->
+                    <app-popular-tags></app-popular-tags>
                 </div>
             </div>
 
