--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,10 @@
 mat-form-field {
     width: 100%;
 }
+
+.content {
+    padding-bottom: 50px;
+    margin-top: 30px;
+    margin-bottom: 400px;
+    background-color: url(http://2.bp.blogspot.com/-iFvxg9CkLPo/U0uTIS8ieWI/AAAAAAAAATE/BFuBsdCrfqI/s1600/background.png) repeat;
+}
