--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,9 @@
 
 <div class="header"></div>
 
-<router-outlet></router-outlet>
+<div class="content">
+    <router-outlet></router-outlet>
+</div>
 
 <footer class="footer">
     <div class="container">
