--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,4 +1,4 @@
-<div class="container content">
+<div class="container">
     <div class="row">
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
             <app-posts-list></app-posts-list>
