Added correct styles for tags

--- a/src/app/popular-tags/popular-tags.component.html
+++ b/src/app/popular-tags/popular-tags.component.html
@@ -1,1 +1,1 @@
-<input *ngFor="let tag of tags" type="submit" class="btn-join tags" value="{{tag.name}}" routerLink="/tag/{{tag.name}}">
+<input *ngFor="let tag of tags" type="submit" class="tags" value="{{tag.name}}" routerLink="/tag/{{tag.name}}">
