--- a/src/app/post/post-view/post-view.component.css
+++ b/src/app/post/post-view/post-view.component.css
@@ -101,3 +101,15 @@ app-social {
     padding: 0;
     z-index: 100;
 }
+
+.create-comment {
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 15px;
+    padding-bottom: 35px;
+}
+
+.create-comment h2 {
+    font-family: inherit;
+    font-weight: 600;
+}
