Added method in the backend and in the service for creating comment

--- a/src/app/comment/comment-create/comment-create.component.html
+++ b/src/app/comment/comment-create/comment-create.component.html
@@ -1,6 +1,6 @@
 <mat-form-field>
-    <textarea matInput placeholder="Enter your comment" tabindex="1"></textarea>
+    <textarea matInput placeholder="Enter your comment" tabindex="1" [(ngModel)]="comment"></textarea>
 </mat-form-field>
 <div mat-dialog-actions>
-    <button mat-button type="submit" tabindex="2">Add comment</button>
+    <button mat-button type="submit" tabindex="2" (click)="comment.length !== 0 && createComment(comment, 0)">Add comment</button>
 </div>
