--- a/src/app/post/post-view/post-view.component.html
+++ b/src/app/post/post-view/post-view.component.html
@@ -17,9 +17,14 @@
                     <p class="description-post-text">{{ post.text }}</p>
                 </div>
 
-                <div class="create-comment" *ngIf="user">
+                <div class="comment" *ngIf="user">
                     <h2>Create Comment</h2>
                     <app-comment-create [userId]="user.id" [postId]="post.id"></app-comment-create>
+                </div>
+
+                <div class="comment">
+                    <h2>Comments</h2>
+                    <app-comment-view></app-comment-view>
                 </div>
             </div>
         </div>
