Added meassge if there are no comments in the post

--- a/src/app/comment/comments-list/comments-list.component.html
+++ b/src/app/comment/comments-list/comments-list.component.html
@@ -1,1 +1,2 @@
 <app-comment-view *ngFor="let comment of comments" [comment]="comment"></app-comment-view>
+<h3 *ngIf="!hasAnyComments">There are no comments. Be first!</h3>
