--- a/src/app/comment/comments-list/comments-list.component.html
+++ b/src/app/comment/comments-list/comments-list.component.html
@@ -1,2 +1,2 @@
-<app-comment-view *ngFor="let comment of comments" [comment]="comment"></app-comment-view>
+<app-comment-view *ngFor="let comment of comments" [comment]="comment" (getComments)="getComments($event)"></app-comment-view>
 <h3 *ngIf="!hasAnyComments">There are no comments. Be first!</h3>
