--- a/src/app/post/buttons/comments/comments.component.html
+++ b/src/app/post/buttons/comments/comments.component.html
@@ -1,1 +1,3 @@
-<span>No Comments</span>
+<span *ngIf="comments === 0">No comments</span>
+<span *ngIf="comments === 1">{{comments}} comment</span>
+<span *ngIf="comments > 1">{{comments}} comments</span>
