--- a/src/app/post/list-preview/post-preview.component.html
+++ b/src/app/post/list-preview/post-preview.component.html
@@ -1,5 +1,5 @@
 <div class="post-img">
-    <app-comments></app-comments>
+    <app-comments [comments]="post.comments"></app-comments>
     <app-edit-delete *ngIf="user && user.id === post.userId" [postId]="post.id"></app-edit-delete>
     <app-social></app-social>
     <img class="img-responsive center-block" src="http://via.placeholder.com/850x450">
