--- a/src/app/post/post-view/post-view.component.html
+++ b/src/app/post/post-view/post-view.component.html
@@ -3,7 +3,7 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div *ngIf="post">
                 <div class="one-post">
-                    <app-edit-delete [postId]="post.id"></app-edit-delete>
+                    <app-edit-delete *ngIf="user && user.id === post.userId" [postId]="post.id"></app-edit-delete>
                     <app-social></app-social>
                     <img class="img-responsive center-block" src="http://via.placeholder.com/1200x600">
                     <div class="title">
