Added button for removing comment. This button is showed when mouse hovers the comment.

--- a/src/app/comment/comment-view/comment-view.component.css
+++ b/src/app/comment/comment-view/comment-view.component.css
@@ -31,3 +31,16 @@
 .comment-info {
     padding-top: 5px;
 }
+
+.comment-remove {
+    float: right;
+    position: relative;
+    top: 5px;
+    color: rgba(78, 0, 0, 0);
+    transition: all .3s ease-in;
+}
+
+.comment:hover .comment-remove{
+    color: rgba(78, 0, 0, 1);
+    transition: all .3s ease-in;
+}
