--- a/src/app/comment/comment-view/comment-view.component.html
+++ b/src/app/comment/comment-view/comment-view.component.html
@@ -1,6 +1,7 @@
 <ul class="comment">
     <li class="text-justify">
         <img src="http://via.placeholder.com/60x60" alt="user" class="img-responsive img-user">
+        <a class="comment-remove"><span class="glyphicon glyphicon-remove"></span></a>
         <div class="comment-info">
             <span class="comment-author">{{comment.author}}</span>
             <span *ngIf="comment.previousId">to</span>
