--- a/src/app/post/post-view/post-view.component.html
+++ b/src/app/post/post-view/post-view.component.html
@@ -24,7 +24,7 @@
 
                 <div class="comment">
                     <h2>Comments</h2>
-                    <app-comments-list></app-comments-list>
+                    <app-comments-list [userId]="user.id"></app-comments-list>
                 </div>
             </div>
         </div>
