--- a/src/app/comment/comment-view/comment-view.component.html
+++ b/src/app/comment/comment-view/comment-view.component.html
@@ -1,16 +1,16 @@
 <ul class="comment">
     <li class="text-justify">
         <img src="http://via.placeholder.com/60x60" alt="user" class="img-responsive img-user">
-        <a class="comment-remove"><span class="glyphicon glyphicon-remove"></span></a>
+        <a class="comment-remove" *ngIf="userId === comment.userId" (click)="openDialogDelete(comment.id, comment.postId)"><span class="glyphicon glyphicon-remove"></span></a>
         <div class="comment-info">
             <span class="comment-author">{{comment.author}}</span>
-            <span *ngIf="comment.previousId">to</span>
+            <span *ngIf="comment.previousId">to </span>
             <span *ngIf="comment.previousId" class="comment-author">{{comment.prevAuthor}}</span>
             <span class="comment-date">{{comment.dateUpdate | date: 'd MMMM yyyy'}}</span>
             <p>{{comment.text}}</p>
         </div>
         <ul *ngIf="comment.children">
-            <app-comment-view *ngFor="let comment of comment.children" [comment]="comment"></app-comment-view>
+            <app-comment-view *ngFor="let comment of comment.children" [userId]="userId" [comment]="comment"></app-comment-view>
         </ul>
     </li>
 </ul>
